# raytracer

./: .gitignore  CMakeLists.txt  README.md  a.out  gryvec.hpp  main.cpp  raytracerconfig.h.in  sphere.hpp
include/: BlinnPhong.hpp  GRY_Color.hpp  GRY_Material.hpp  GRY_Ppm.hpp  GRY_Vec.hpp  GRY_View.hpp  Light.hpp  LightSource.hpp  Plane.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  gryvec.hpp  lightSource.hpp  sphere.hpp
src/: BlinnPhong.cpp  GRY_Color.cpp  Plane.cpp  Scene.cpp  Sphere.cpp  main.cpp
